# rust_prisoner

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs  prisoners_riddle.rs
