[package]
name = "rust_prisoner"
version = "0.1.0"
edition = "2021"
keywords=["100", "prisoners", "simualtion", "math", "problem"]
categories = ["Algorithms", "Mathematics", "Simulation"]
readme = "README.md"
repository = "https://github.com/NatanFreeman/search_dir"
license = "Unlicense"
license-file = "LICENSE.txt"
description="The simulation in this Rust code proves the correctness of awnser to the 100 prisoner riddle."

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
